--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,1 @@
-<h1>{{ title() }}</h1>
-<app-course></app-course>  <!-- this will render Course component output -->
-<router-outlet></router-outlet>
+<h1>{{ title }}</h1> 
